  * Glass and mob spawners render a bit better.

Minecraft X-Ray 2.7 Maintenance Branch 11 (2011.03.16)

  * Fix to be not so picky about colorizing grass
  * Fix which prevents a crash while in Explored Highlighting mode
  * Fix Sapling rendering (also a crash)
  * Override texture data for X-Ray will be read from the
    .minecraft_xray/textures directory now

Minecraft X-Ray 2.7 Maintenance Branch 10 (2011.03.15)

  * Added Invert Mouse option to startup dialog
  * Some changes to compile versus Java 1.5 instead of 1.6, for PPC OSX
    users
  * Added a dialog to jump directly to a position, with a default key of J
  * Enter/Esc will do what you'd expect on the startup dialog
  * World list on the startup dialog is now scrollable
  * A startup warning was added for Windows systems about possible region
    corruption if X-Ray is run at the same time as Minecraft.  (I haven't
    heard reports of this yet, but given the way Windows locks files, it
    could potentially be an issue.)
  * Application settings state is remembered inbetween runs
  * A new Reload action will re-read the map from disk, with a default
    key of "="
  * Greatly improved torch and lever rendering

Minecraft X-Ray 2.7 Maintenance Branch 9 (2011.02.22)

  * Snow will render more properly (as a thin slice) now
  * Ice is now considered water, and won't cause you to see through terrain
    if it's right up against the ground
  * Player spawnpoints/locations were off by 1 on the Z axis; fixed that
  * Support for Beta 1.3 Region format for chunk storage
  * (internal) changed class name to com.apocalyptech.minecraft.xray
  * Ignore blocks generated by the More Block IDs mod, rather than dying
  * Fixed Minecraft data directory detection on a corner case (possibly
    just for people using the Administrator account in XP)
  * Resolution dialog will show any valid world directory inside the
    "saves" dir, instead of just those of the form WorldN